gl33-master/src/test/deca/context/invalid/other/declaration_meme_nom_int_string.deca
// Invalid
// Déclaration des variables de même nom (int et String)


{
   int a;
   String a;
}
